2005-04-27  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.h: remove dead prototype

2005-04-25  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/opd_mangling.c: protect last against sfile lru deletion
	* daemon/opd_sfile.c: allow null sfile to sfile_get(), sfile_put()

2005-04-24  John Levon  <levon@movementarian.org>

	* daemon/opd_cookie.h:
	* daemon/opd_cookie.c:
	* daemon/opd_trans.c:
	* daemon/opd_sfile.c:
	* daemon/opd_stats.h:
	* daemon/opd_stats.c: handle NO_COOKIE (drop on the floor)

	* m4/qt.m4: allow gcc 4.0 compile with Qt headers
	  by using -isystem

2005-04-23  John Levon  <levon@movementarian.org>

	* configure.in: add --with-gcc, --with-binutils (for
	  development use only, undocumented)

2005-04-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/locate_images.h: add a virtual dtor to extra_images::matcher

2005-04-22  John Levon  <levon@movementarian.org>

	* doc/internals.xml: some paragraphs on call graphs

	* libop/op_events.h:
	* libop/op_events.c:
	* libutil/op_deviceio.h:
	* libutil/op_deviceio.c:
	* libutil/op_fileio.h:
	* libutil/op_fileio.c: remove dead code

	* libutil/op_lock_file.h:
	* libutil/op_lock_file.c: make a function static

	* libutil++/Makefile.am:
	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp:
	* libutil++/bfd_support.h:
	* libutil++/bfd_support.cpp: move lots of BFD gunk into
	  a separate file. Fix synth symbols support, with lots of
	  testing by Maynard.

	* libutil++/comma_list.h: remove unused set_p

	* pp/opannotate.cpp: complain less verbosely if the input file
	  couldn't be found

2005-04-14  John Levon  <levon@movementarian.org>

	* libutil++/growable_vector.h:
	* libpp/diff_container.cpp: fix fill()

	* pp/opreport.cpp: fix multiple apps for diff output

2005-04-14  John Levon  <levon@movementarian.org>

	* daemon/opd_interface.h:
	* daemon/opd_trans.c: remove legacy TRACE_END

	* daemon/liblegacy/opd_kernel.c:
	* daemon/liblegacy/opd_proc.c: avoid attributing "no mapping"